adding sqlite3 sample